# multiproc

./: .gitignore  .multiproc  .releaserc.json  CHANGELOG.md  CMakeLists.txt  Dockerfile.build  LICENSE  README.md  multiproc.cpp  package-lock.json  package.json
.github/workflows/: release.yml
